# discrete_system

./: Cargo.toml
src/: lib.rs  mimo.rs  miso.rs  simo.rs  siso.rs
