[package]
name = "discrete_system"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Traits for SISO, SIMO, MISO and MIMO type discrete systems"
repository = "https://github.com/sigurd4/discrete_system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.1.0"